[package]
name = "evm-jsontests"
version = "0.13.1"
license = "GPL-3.0"
authors = ["Wei Tang <hi@that.world>", "Parity Technologies <admin@parity.io>"]
description = "SputnikVM - a Portable Blockchain Virtual Machine"
repository = "https://github.com/sorpaas/rust-evm"
keywords = ["no_std", "ethereum"]
edition = "2018"

[dependencies]
module-evm = { path = "../../modules/evm", features = ["with-ethereum-compatibility", "evm-tests"] }
module-evm-accounts = { path = "../../modules/evm-accounts" }
evm-utility = { path = "../../modules/evm-utility", package = "module-evm-utility" }
module-support = { path = "../../modules/support" }
module-idle-scheduler  = { path = "../../modules/idle-scheduler" }
orml-traits = { path = "../../orml/traits" }
orml-tokens = { path = "../../orml/tokens" }
orml-currencies = { path = "../../orml/currencies" }
primitives = { path = "../../primitives", package = "acala-primitives", features = ["evm-tests"] }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }

sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
scale-info = { version = "2.0.1", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.0.0" }

primitive-types = "0.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
clap = "3.1"
ethjson = { path = "../ethjson", features = ["test-helpers"] }
parity-crypto = { version = "0.9", features = ["publickey"] }
triehash-ethereum = { path = "../triehash-ethereum" }
rlp = "0.5"
sha3 = "0.10.0"
parity-bytes = "0.1"
env_logger = "0.8"
lazy_static = "1.4.0"
