[package]
name = "evm-jsontests"
version = "0.13.1"
license = "GPL-3.0"
authors = ["Wei Tang <hi@that.world>", "Parity Technologies <admin@parity.io>"]
description = "SputnikVM - a Portable Blockchain Virtual Machine"
repository = "https://github.com/sorpaas/rust-evm"
keywords = ["no_std", "ethereum"]
edition = "2021"

[dependencies]
scale-info = { version = "^2.9", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "^3.0" }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
hex = "^0.4"
libsecp256k1 = "^0.7"
rlp = "^0.5"
sha3 = "^0.10"
parity-bytes = "^0.1"
env_logger = "^0.10"
lazy_static = "^1.4"
log = "^0.4"

frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-balances = { workspace = true, features = ["insecure_zero_ed"] }
pallet-timestamp = { workspace = true }
sp-runtime = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }

module-evm = { path = "../../modules/evm" }
module-evm-accounts = { path = "../../modules/evm-accounts" }
evm-utility = { path = "../../modules/evm-utility", package = "module-evm-utility" }
module-support = { path = "../../modules/support" }
module-idle-scheduler  = { path = "../../modules/idle-scheduler" }
orml-traits = { path = "../../orml/traits" }
orml-tokens = { path = "../../orml/tokens" }
orml-currencies = { path = "../../orml/currencies" }
primitives = { path = "../../primitives", package = "acala-primitives" }
triehash-ethereum = { path = "../triehash-ethereum" }
ethjson = { path = "../ethjson", features = ["test-helpers"] }

[features]
evm-tests = [
    "module-evm/with-ethereum-compatibility",
    "module-evm/evm-tests",
    "primitives/evm-tests"
]
